problems with json in app

--- a/TestRest-server/src/main/webapp/index.html
+++ b/TestRest-server/src/main/webapp/index.html
@@ -63,6 +63,10 @@
     </tr>
 </table>
 
+<div id="quizzes-container">
+
+</div>
+
 <div class="container">
     <div id="userInfoContainer"></div>
 </div>
