added appending standard questions and their answers

--- a/TestRest-server/src/main/webapp/index.html
+++ b/TestRest-server/src/main/webapp/index.html
@@ -44,32 +44,30 @@
     </div>
 </noscript>
 
-<h1>Web Application Starter Project</h1>
-
 <table align="center">
     <tr>
-        <td colspan="2" style="font-weight:bold;">Please enter your name:</td>
-    </tr>
-    <tr>
-        <td id="nameFieldContainer"></td>
-        <td id="sendButtonContainer"></td>
-    </tr>
-    <tr>
-        <td id="nameFieldContainer2"></td>
-        <td id="sendButtonContainer3"></td>
-    </tr>
-    <tr>
-        <td colspan="2" style="color:red;" id="errorLabelContainer"></td>
+        <td><h4>System testing with GWT</h4></td>
     </tr>
 </table>
 
-<div id="quizzes-container">
-
-</div>
-
 <div class="container">
-    <div id="userInfoContainer"></div>
+    <div class="row">
+        <p><a href="/logout">logout</a></p>
+    </div>
+    <div class="row">
+        <div id="admin-quizzes-container"/>
+    </div>
+    <div class="row">
+
+    </div>
 </div>
+
+
+</table>
+
+
+</div>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
