fixing user panel

--- a/TestRest-server/src/main/webapp/index.html
+++ b/TestRest-server/src/main/webapp/index.html
@@ -54,11 +54,13 @@
     <div class="row">
         <p><a href="/logout">logout</a></p>
     </div>
-    <div class="row">
-        <div id="admin-quizzes-container"/>
-    </div>
-    <div class="row">
 
+    <div class="row">
+        <div id="admin-quizzes-container"></div>
+    </div>
+
+    <div class="row">
+        <div id="quizzes-list"></div>
     </div>
 </div>
 
